[package]
name = "caffe_paser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
unicode_categories = "0.1.1"
